--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1> Odin Recipes </h1>
-        <a href="./recipes/eggplantsandwich.html">Eggplant Sandwich</a>
+        <ul>
+            <li> <a href="./recipes/eggplantsandwich.html">Eggplant Sandwich</a> </li>
+            <li> <a href="./recipes/cauliflowershawarma.html">Cauliflower Shawarma</a></li>
+        </ul>
     </body>
 </html>
