Add Falafel and modify other files

--- a/recipes/cauliflowershawarma.html
+++ b/recipes/cauliflowershawarma.html
@@ -2,12 +2,12 @@
 <html>
     <head lang="en">
         <meta charset="utf-8">
-        <title></title>
+        <title> Odin Recipes|Cauliflower Shawarma </title>
     </head>
     <body>
-        <h1>Cauliflower Shawarma</h1>
+        <h1> Cauliflower Shawarma </h1>
         <img src="cauliflowershawarma.jpg" alt="Cauliflower Shawarma" height="300" width="300">
-        <h3>Spicy Cauliflower Shawarma</h3>
+        <h3> Spicy Cauliflower Shawarma </h3>
         <p>If you like the robust flavors of shawarma, but want to pack extra vegetables into your diet this vegetarian Cauliflower Shawarma is for you. 
             First, I season the cauliflower with a shawarma spice blend of cumin, turmeric, coriander, garlic, paprika and more, then I it roast until it’s caramelized, 
             slightly charred, super flavorful, and incredibly tender. 
@@ -16,7 +16,8 @@
             and Tahini sauce to drizzle over the top. Both the salad and the sauce only take minutes to come together.
  
         </p>
-        <h3>Ingredients</h3>
+        <h3> Ingredients </h3>
+        <h4> For The Cauliflower Shawarma </h4>
         <ul>
             <li> 1 large head cauliflower, divided into florets </li>
             <li> 1 large yellow onion, halved and sliced </li>
@@ -25,6 +26,7 @@
             <li> Ground black pepper </li>
             <li> Extra virgin olive oil</li>
         </ul>
+        <h4> To Serve </h4>
         <ul>
             <li> Pita bread, homemade or store bought </li>
             <li> 3-Ingredient Mediterranean Salad </li>
