--- a/recipes/eggplantsandwich.html
+++ b/recipes/eggplantsandwich.html
@@ -2,10 +2,10 @@
 <html>
     <head lang="en">
         <meta charset="utf-8">
-        <title></title>
+        <title> Odin Recipes|Eggplant Sandwich </title>
     </head>
     <body>
-        <h1>Eggplant Sandwich</h1>
+        <h1> Eggplant Sandwich </h1>
         <img src="eggplantsandwich.jpg" alt="Eggplant Sandwich" height="300" width="300">
         <h3>Open-faced eggplant Parmesan sandwich</h3>
         <p>This open-faced eggplant Parmesan sandwich works as both a light dinner or an easy vegetarian appetizer. 
