--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
     <head lang ="en">
         <meta charset="utf-8">
-        <title></title>
+        <title> Odin Recipes </title>
     </head>
     <body>
         <h1> Odin Recipes </h1>
         <ul>
-            <li> <a href="./recipes/eggplantsandwich.html">Eggplant Sandwich</a> </li>
-            <li> <a href="./recipes/cauliflowershawarma.html">Cauliflower Shawarma</a></li>
+            <li> <a href="./recipes/eggplantsandwich.html"> Eggplant Sandwich </a> </li>
+            <li> <a href="./recipes/cauliflowershawarma.html"> Cauliflower Shawarma </a></li>
+            <li> <a href="./recipes/falafel.html"> Falafel </a></li>
         </ul>
     </body>
 </html>
