--- a/recipes/eggplantsandwich.html
+++ b/recipes/eggplantsandwich.html
@@ -7,6 +7,7 @@
     <body>
         <h1> Eggplant Sandwich </h1>
         <img src="eggplantsandwich.jpg" alt="Eggplant Sandwich" height="300" width="300">
+        <p> Recipe Credit: <a href="https://www.themediterraneandish.com/open-faced-eggplant-parmesan-sandwich/"> The Mediterranean Dish </a></p>
         <h3>Open-faced eggplant Parmesan sandwich</h3>
         <p>This open-faced eggplant Parmesan sandwich works as both a light dinner or an easy vegetarian appetizer. 
             It packs all the flavors of classic eggplant parmesan with less fuss — no breading or frying required! 
