--- a/recipes/falafel.html
+++ b/recipes/falafel.html
@@ -7,6 +7,7 @@
     <body>
         <h1> Falafel </h1>
         <img src="falafel.jpg" alt="Falafel" height="300" width="300">
+        <p> Recipe Credit: <a href="https://www.themediterraneandish.com/how-to-make-falafel/"> The Mediterranean Dish </a></p>
         <h3> Easy Authentic Falafel Recipe </h3>
         <p>Falafel is a popular Middle Eastern “fast food” made of a mixture of chickpeas (or fava beans), fresh herbs, and spices that are formed into a small patties or balls. 
             Falafel continues to be the people’s daily grub in Egypt and you can find it from street vendors in almost every neighborhood.  
