Modify recipes in HTML

--- a/recipes/eggplantsandwich.html
+++ b/recipes/eggplantsandwich.html
@@ -2,13 +2,14 @@
 <html>
     <head lang="en">
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../styles.css">
         <title> Odin Recipes|Eggplant Sandwich </title>
     </head>
     <body>
         <h1> Eggplant Sandwich </h1>
         <img src="eggplantsandwich.jpg" alt="Eggplant Sandwich" height="300" width="300">
         <p> Recipe Credit: <a href="https://www.themediterraneandish.com/open-faced-eggplant-parmesan-sandwich/"> The Mediterranean Dish </a></p>
-        <h3>Open-faced eggplant Parmesan sandwich</h3>
+        <h2>Open-faced eggplant Parmesan sandwich</h2>
         <p>This open-faced eggplant Parmesan sandwich works as both a light dinner or an easy vegetarian appetizer. 
             It packs all the flavors of classic eggplant parmesan with less fuss — no breading or frying required! 
             Just bake the eggplant in the oven then layer it on toasted bread with melty cheese, pesto, and tomato sauce.
@@ -18,7 +19,23 @@
             sauce on toasted ciabatta bread, top it with the roasted eggplant, parmesan and mozzarella cheese, 
             then pop it in the oven for about 10 minutes. 
         </p>
-        <h3>Ingredients</h3>
+        <h2>Recipe Card - Eggplant Parmesan Sandwich</h2>
+        <p> With eggplant baked in the oven until caramelized and 
+            layered with melty cheese, pesto, and marinara sauce, 
+            this open-faced vegetarian sandwich packs all of the 
+            flavors of Eggplant Parmesan with half of the time and 
+            effort. Serve for dinner with a side salad, or as a party 
+            appetizer.</p>
+        <ul>
+            <li>PREP - 10 MINS |</li>
+            <li> COOK - 35MINS | TOTAL -45 MINS</li>
+            <li> SERVES - 12 PIECES </li>
+            <li>CUISINE - ITALIAN </li>
+            <li> APPETIZER, ENTREE </li>
+        </ul>
+
+
+        <h2>Ingredients</h2>
         <ul>
             <li> 2 small eggplants, sliced into 1/2-inch rounds </li>
             <li> Kosher salt </li>
@@ -40,6 +57,5 @@
             <li> <strong> Bake: </strong> Slide the sheet-pan with the assembled eggplant sandwiches on the center rack of the oven. Bake until the mozzarella is melted and has gained some color, about 10 minutes. Remove from the oven and add the grated Parmesan on top. Return to the oven for a minute or two for the Parmesan to warm through. </li>
             <li> <strong> Slice and serve: </strong> Slice each half of the bread into 5 to 6 pieces, with each piece having its own eggplant and cheese stack. Garnish with fresh basil, if using, and serve. </li>
         </ol>
-
     </body>
 </html>
