--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
     <head lang ="en">
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./styles.css">
         <title> Odin Recipes </title>
     </head>
     <body>
+        <img src="../odin-recipes/recipes/odinrecipes.png" alt="Logo">
         <h1> Odin Recipes </h1>
         <ul>
             <li> <a href="./recipes/eggplantsandwich.html"> Eggplant Sandwich </a> </li>
