--- a/recipes/falafel.html
+++ b/recipes/falafel.html
@@ -2,6 +2,7 @@
 <html>
     <head lang="en">
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../styles.css">
         <title> Odin Recipes|Falafel </title>
     </head>
     <body>
